src/blocks/shared/CommonMessage.scss
.seeds-common-message {
  /* These are mainly here for reference…they're overridden by specific tokens from
     Alert, Message, and Toast */
  --common-message-padding: var(--seeds-s4);
  --common-message-border-radius: 0;
  --common-message-border: none;
  --common-message-flex-gap: var(--seeds-s3);
  --common-message-icon-scale-factor: 1;
  --common-message-max-width: var(--seeds-width-sm);
  --common-message-font: var(--seeds-font-sans);
  --common-message-font-size: var(--seeds-type-caption-size);
  --common-message-link-gap: var(--seeds-s1);
  --common-message-link-font-weight: var(--seeds-font-weight-semibold);

  padding: var(--common-message-padding);
  display: flex;
  align-items: center;
  line-height: var(--seeds-line-height-4);
  gap: var(--common-message-flex-gap);
  max-width: var(--common-message-max-width);
  font-family: var(--common-message-font);
  font-size: var(--common-message-font-size);

  border-radius: var(--common-message-border-radius);
  border: var(--common-message-border);

  &.is-fullwidth {
    max-width: 100%;
    justify-content: center;
  }

  &[data-variant="primary"] {
    background: var(--seeds-color-primary-light);
    color: var(--seeds-color-on-surface);
  }

  &[data-variant="primary-inverse"] {
    background: var(--seeds-color-primary);
    color: var(--seeds-color-on-inverse);
  }

  &[data-variant="success"] {
    background: var(--seeds-color-success-light);
    color: var(--seeds-color-on-surface);
  }

  &[data-variant="success-inverse"] {
    background: var(--seeds-color-success);
    color: var(--seeds-color-on-inverse);
  }

  &[data-variant="alert"] {
    background: var(--seeds-color-alert-light);
    color: var(--seeds-color-on-surface);
  }

  &[data-variant="alert-inverse"] {
    background: var(--seeds-color-alert);
    color: var(--seeds-color-on-inverse);
  }

  &[data-variant="warn"] {
    background: var(--seeds-color-warn-light);
    color: var(--seeds-color-on-surface);
  }

  &[data-variant="warn-inverse"] {
    background: var(--seeds-color-warn);
    color: var(--seeds-color-on-surface);
  }

  &[data-variant="secondary"] {
    background: var(--seeds-color-secondary-light);
    color: var(--seeds-color-on-surface);
  }

  &[data-variant="secondary-inverse"] {
    background: var(--seeds-color-secondary-darker);
    color: var(--seeds-color-on-inverse);
  }

  &:not(.is-fullwidth) > [data-part="content"] {
    flex-grow: 1;
  }

  &.is-fullwidth > [data-part="content"] {
    width: 100%;
    max-width: var(--common-message-max-width);
  }

  > button {
    padding: 0;
    background-color: transparent;
    background-image: none;
    border: none;
  }

  .seeds-icon {
    --icon-scale-factor: var(--common-message-icon-scale-factor);
  }

  a {
    // margin-inline-start: var(--seeds-s1);
    margin-inline-start: var(--common-message-link-gap);
    color: currentColor;
    text-decoration: underline;
    font-weight: var(--common-message-link-font-weight);
  }
}

